1. Update project config file structures. 2. Add serve/lint scripts to package.json. 3. Enable git hook. 4. Update .gitignore and .npmignore

--- a/templates/project/content/.gitignore.template
+++ b/templates/project/content/.gitignore.template
@@ -38,5 +38,14 @@ apps/**/config/**/session.js
 apps/**/config/**/store.js
 config/**/session.js
 config/**/store.js
+config/**/master.js
+config/**/gateway.js
 !config/example/session.js
 !config/example/store.js
+!config/example/master.js
+!config/example/gateway.js
+
+upload/
+
+*.nginx.conf
+*.pm2.json
