--- a/templates/project/content/package.json
+++ b/templates/project/content/package.json
@@ -7,9 +7,11 @@
     "init": "kexpress-cli init",
     "start": "pm2 start {{{project.name}}}.pm2.json",
     "dev": "cross-env KEXPRESS_ENV=dev node loader.js",
+    "serve": "pm2 start make-money.dev.pm2.json",
     "test": "cross-env KEXPRESS_ENV=test jest --coverage apps",
     "deploy": "cross-env KEXPRESS_ENV=prod.single KEXPRESS_COMMAND=deploy node loader.js",
     "doc": "cross-env KEXPRESS_ENV=dev KEXPRESS_COMMAND=doc kexpress-cli doc rest",
+    "lint": "eslint .",
     "tools": "cross-env KEXPRESS_ENV=dev node tools/index"
   },
   "keywords": [
@@ -18,7 +20,8 @@
   "license": "{{{project.license}}}",
   "devDependencies": {
     "cross-env": "^5.1.4",
-    "eslint": "^4.19.1"
+    "eslint": "^4.19.1",
+    "husky": "^1.1.0"
   },
   "dependencies": {
     "connect-mongo": "^2.0.1",
@@ -29,5 +32,10 @@
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0",
     "uuid": "^3.3.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
